Fix #356: Recalculate breadcrum width (#357)
- when updating the breadcrumb contents, recalculate its total width, too
- apply that width to the trail element to avoid truncation
- because the breadcrumb can now extend farther to the right, add top padding
  to the legend so that it will not occlude the breadcrumb. A better solution might
  wrap the breadcrumb, but that should be a new feature, not in scope of this fix

--- a/web/coffee-workflow-analyzer/wf-analyzer-web-app/analyze.css
+++ b/web/coffee-workflow-analyzer/wf-analyzer-web-app/analyze.css
@@ -1,5 +1,5 @@
 /*!
- * Copyright (c) 2019-2020 EclipseSource and others.
+ * Copyright (c) 2019-2021 EclipseSource and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
@@ -72,7 +72,8 @@ body {
 }
 
 #legend {
-  padding: 10px 0 0 3px;
+  /* Sufficient top padding in case the breadcrumb is very long, to fit under it. */
+  padding: 50px 0 0 3px;
 }
 
 #sequence text, #legend text {
